--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -6,18 +6,22 @@
 /* Luego, importa tus fuentes de Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300..700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 /* Y después, tus variables y clases personalizadas */
 :root {
   --font-logo: 'Pacifico', cursive;
   --font-nav: 'Quicksand', sans-serif;
+--font-mobile-nav: 'Lora', serif;
   --pastel-pink: #F8C8DC; 
   --text-color: #333;
-  --link-hover: #E3B4C5;
+  --link-hover: #f188af;
   --background-color: #ffffff;
   --pastel-menta:#87cfbc;
 }
-
+body{
+background-image:url(./assets/images/fondo.jpg);
+background-size: cover;
+}
 .bg-pastel-pink {
   background-color: var(--pastel-pink);
 }
@@ -27,11 +31,13 @@
 }
 
 .nav-link {
-    font-family: var(--font-nav);
-    font-weight: 550; /* Medium, un poco más de negrita que "normal" */
-    letter-spacing: 0.01em; /* Ajusta este valor para más o menos espacio */
+  font-weight: 550;
+  font-size: 1em;
+  letter-spacing: 0.5px;}
 
-    font-size: 1rem;
+.mobile-nav-link {
+    font-weight: 600; /* Regular, más profesional */
+    font-size: 1em;
 }
 
 @media (min-width: 768px) {
@@ -41,3 +47,4 @@
     transform: translateX(-50%);
   }
 }
+
