--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -13,6 +13,15 @@ html, body, #root {
   width: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+/* Elimina cualquier fondo por defecto */
+body {
+  background: rgb(240, 236, 238)
+;
+}
 /* FONDO GENERAL PARA TODA LA APLICACIÓN */
 
 
@@ -95,7 +104,51 @@ html, body, #root {
 @media (min-width: 768px) {
   .footer-email {
     position: absolute;
-    left: 48%;
+    left: 48.7%;
     transform: translateX(-50%);
   }
+}
+
+.login-page {
+    background-image: url(../src/assets/images/fondo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centrado vertical */
+    align-items: center;     /* Centrado horizontal */
+}
+
+/* Fondo fijo detrás */
+.login-page::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../src/assets/images/fondo.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: -1;
+}
+
+/* Contenedor del contenido */
+.login-content {
+    flex: 1;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
